--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost/despensainteligente?useSSL=false
-spring.datasource.username=root
+spring.thymeleaf.mode=html
+spring.thymeleaf.cache=false
+
+spring.datasource.url=jdbc:postgresql://localhost/despensa?useSSL=false
+spring.datasource.username=postgres
 spring.datasource.password=admin
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
